# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  01 Mar 2004; Marius Mauch <genone@gentoo.org> bin/emerge,
  bin/emergehelp.py, man/emerge.1:
  Updated docs for --update and removed the "help" action (wasn't working
  anyway).

  29 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed 
  wrong USE in 'emerge info'. This should fix #34260.
	
  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Fixed info dir
  regeneration produces errors with a non-C locale and misleading error 
  message. This should fix #41872,#24299.

  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, emergehelp.py,
  emerge.1: Added genone's patch for man/help of --tree option.

  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> ebuild.sh: Removed 
  /usr/share directory in ${D} when it's empty. This should close #42312.

  26 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Added new option
  --newuse. This option is to rebuild a package whose USE has been changed.

  22 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, portage.py: speedup
  when /etc/portage/package.keywords is defined. Moved loading
  /etc/portage/package.* processs to config class. This should fix #41520.

  19 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py:
  Fixed CATEGORY value after preinst phase. This should close #6414. Fixed
  nested dependency problem and cleaned up dep_zapdeps function.
  This bug happened with DEPEND='|| ( cat_a/pkg_a flag? ( cat_b/pkg_b ) )'.
  This should close #41869.

  13 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed parsing
  SRC_URI bug when FEATURES="cvs". This should close #16159.

  12 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, pym/portage.py:
  TGL's patch for correction package size when emerge -v. -- Fixed
  use.default bug. It occurs when package in use.default exists in system