@@ -2,6 +2,12 @@
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  03 Mar 2004; Marius Mauch <genone@gentoo.org> tarball.sh, bin/repoman,
+  pym/portage.py:
+  Fixing the "letter before endversion" bug (#17172). Replacing
+  keywords.desc with arch.list in repoman (#35398). FEATURES=strict
+  is now sufficient for Manifest validation (#41292).
+
   01 Mar 2004; Marius Mauch <genone@gentoo.org> bin/emerge,
   bin/emergehelp.py, man/emerge.1:
   Updated docs for --update and removed the "help" action (wasn't working
